--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "electron-debug": "^3.2.0",
     "electron-reload": "^1.5.0",
+    "node-fetch": "^2.6.1",
     "xel": "^0.9.6",
     "xel-fonts": "^0.9.1"
   }
