--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "electron-debug": "^3.2.0",
     "electron-reload": "^1.5.0",
+    "electron-settings": "^4.0.2",
     "filereader": "^0.10.3",
     "node-fetch": "^2.6.1",
     "xel": "^0.9.6",
