--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "electron .",
     "build": "cross-env NODE_ENV=development electron main.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "rebuild": "electron-rebuild -f -w better-sqlite3"
   },
   "keywords": [],
   "author": "Compucom",
@@ -15,14 +16,17 @@
   "devDependencies": {
     "cross-env": "^7.0.3",
     "devtron": "^1.4.0",
-    "electron": "^12.0.6"
+    "electron": "^12.0.6",
+    "electron-rebuild": "^2.3.5"
   },
   "dependencies": {
+    "better-sqlite3": "^7.4.0",
     "electron-debug": "^3.2.0",
     "electron-reload": "^1.5.0",
     "electron-settings": "^4.0.2",
     "filereader": "^0.10.3",
     "node-fetch": "^2.6.1",
+    "node-gyp": "^7.1.2",
     "xel": "^0.9.6",
     "xel-fonts": "^0.9.1"
   }
