--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
     "electron-rebuild": "^2.3.5"
   },
   "dependencies": {
+    "@ffmpeg-installer/ffmpeg": "^1.0.20",
     "better-sqlite3": "^7.4.0",
     "electron-debug": "^3.2.0",
     "electron-reload": "^1.5.0",
     "electron-settings": "^4.0.2",
     "filereader": "^0.10.3",
+    "fluent-ffmpeg": "^2.1.2",
     "node-fetch": "^2.6.1",
     "node-gyp": "^7.1.2",
     "xel": "^0.9.6",
