--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "MATERedBoxClient",
-  "version": "0.7.8",
+  "version": "0.8.1",
   "productName": "MATERedBoxClient",
   "description": "Massive Downloader Client for Red Box Recorders",
   "author": "Compucom",
@@ -17,7 +17,7 @@
   "private": true,
   "dependencies": {
     "@ffmpeg-installer/ffmpeg": "^1.0.20",
-    "better-sqlite3": "^7.4.0",
+    "better-sqlite3": "^7.4.3",
     "electron-debug": "^3.2.0",
     "electron-log": "^4.3.5",
     "electron-reload": "^1.5.0",
@@ -33,8 +33,9 @@
   },
   "devDependencies": {
     "cross-env": "^7.0.3",
-    "electron": "^12.0.16",
-    "electron-builder": "^22.11.7"
+    "electron": "^12.1.2",
+    "electron-builder": "^22.11.7",
+    "electron-rebuild": "^3.2.3"
   },
   "build": {
     "appId": "MATERedBoxClient",
