--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "MATERedBoxClient",
-  "version": "0.8.2",
+  "name": "mate-red-box-client",
+  "version": "0.9.0",
   "productName": "MATERedBoxClient",
   "description": "Massive Downloader Client for Red Box Recorders",
   "author": "Compucom",
